tests/compiler/expected/output/GenericOperatorNotPresent.shtk.txt
MODULE TestModules/Pair.shtk
ERROR in Line 12 Col 20

    result.first = a.first + b.first
                   ^
Type error, did not expect FooBar,
expected Pair

TestModules/Pair.shtk:12:19
GenericOperatorNotPresent.shtk
